src/test/deca/etapeB/invalid/if_then_else_not_boolean.deca
// Description : 
// 	test de condition non boolean dans if   
//Resultat:
//      Erreur Contextuelle :la condition doit etre boolean 
{
if (1){
   println();
}
}